--- a/stuff.html
+++ b/stuff.html
@@ -6,7 +6,7 @@ layout: stuff
 
   <ul class="stuff lists cool-bullet">
       <li>
-      	<a href="" target="_blank">Momo e no tegami</a> is quite a nice anime. Although not a Ghibli, still quite similar in interests. Worth seeing it. 
+      	<a href="http://www.imdb.com/title/tt1853614/" target="_blank">Momo e no tegami</a> is quite a nice anime. Although not a Ghibli, still quite similar in interests. Worth seeing it. 
       </li>
   </ul>
 
