--- a/404.html
+++ b/404.html
@@ -4,8 +4,7 @@ layout: default
 
 <div class="home">
 	
-  <p>404. This is an error. </p>
-  <p>The requested URL was not found on this server. But here are the latest posts.</p>
+  <p>404. This is an error. The requested URL was not found on this server. Sorry for that. Here are the latest posts on my blog.</p>
 
   <ul class="post-list lists cool-bullet">
     {% for post in site.posts %}
