--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@ layout: default
 
 <div class="home">
 	
-  <p>404. This is an error. The requested URL was not found on this server. Sorry for that. Here are the latest posts on my blog.</p>
+  <h1>404. This is an error.</h1>
+	
+  <p>The requested URL was not found on this server. Sorry for that. Here are the latest posts on my blog.</p>
 
   <ul class="post-list lists cool-bullet">
     {% for post in site.posts %}
