robots and better descriptions on category pages

--- a/google-analytics.html
+++ b/google-analytics.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: "List of posts about new Google Analytics"
+description: "Posts about Google Analytics and how to use it in e-commerce environment, focused on Magento CMS"
 ---
 
 <div class="home">
