--- a/magento.html
+++ b/magento.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: "List of posts about magento CMS system"
+description: "Posts about magento - custom modules, frontend, frameworks like Foundation, hacks and more"
 ---
 
 <div class="home">
