--- a/frontend.html
+++ b/frontend.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: "List of posts about new frontend technologies"
+description: "Posts about new frontend technologies, mainly javascript and its cool libraries"
 ---
 
 <div class="home">
