--- a/stuff.html
+++ b/stuff.html
@@ -5,6 +5,12 @@ layout: stuff
 <div class="home">
 
   <ul class="stuff lists cool-bullet">
+	  <li>
+      	<a href="http://www.imdb.com/title/tt0097216" target="_blank">Do the Right Thing</a> - about a pizzeria in a mostly black neighbourhood. Still relevant today. 
+      </li>
+      <li>
+      	<a href="http://www.imdb.com/title/tt3966404/" target="_blank">Mustang</a> is a nice coming-of-age Turkish movie that I recommend. 
+      </li>
       <li>
       	<a href="http://www.imdb.com/title/tt1853614/" target="_blank">Momo e no tegami</a> is quite a nice anime. Although not a Ghibli, still quite similar in interests. Worth seeing it. 
       </li>
