--- a/stuff.html
+++ b/stuff.html
@@ -6,6 +6,9 @@ layout: stuff
 
   <ul class="stuff lists cool-bullet">
 	  <li>
+      	<a href="http://www.imdb.com/title/tt3170832/" target="_blank">Room</a> - one of the most emotional movies I've ever seen. 
+      </li>
+	  <li>
       	<a href="http://www.imdb.com/title/tt0097216" target="_blank">Do the Right Thing</a> - about a pizzeria in a mostly black neighbourhood. Still relevant today. 
       </li>
       <li>
