--- a/stuff.html
+++ b/stuff.html
@@ -6,6 +6,9 @@ layout: stuff
 
   <ul class="stuff lists cool-bullet">
 	  <li>
+      	<a href="http://www.imdb.com/title/tt0059183/" target="_blank">The Flight of the Phoenix</a> - movie about men living on the ragged edge of survival. They managed to work together and save themselves without getting along with each other or surrender their own values. Another classic performance by James Stewart, this time in a non-Hitchcock movie.
+      </li>
+	  <li>
       	<a href="http://www.imdb.com/title/tt3170832/" target="_blank">Room</a> - one of the most emotional movies I've ever seen. 
       </li>
 	  <li>
