--- a/stuff.html
+++ b/stuff.html
@@ -6,6 +6,9 @@ layout: stuff
 
   <ul class="stuff lists cool-bullet">
 	  <li>
+      	<a href="http://www.imdb.com/title/tt1637688/" target="_blank">In Time</a> - a very good idea but unfortunately the script and the actors aren't on par. Money is time and rich people gamble with centuries while poor people have only days. 
+      </li>
+	  <li>
       	<a href="http://www.imdb.com/title/tt0059183/" target="_blank">The Flight of the Phoenix</a> - movie about men living on the ragged edge of survival. They managed to work together and save themselves without getting along with each other or surrender their own values. Another classic performance by James Stewart, this time in a non-Hitchcock movie.
       </li>
 	  <li>
