--- a/stuff.html
+++ b/stuff.html
@@ -5,6 +5,9 @@ layout: stuff
 <div class="home">
 
   <ul class="stuff lists cool-bullet">
+  	<li>
+      	<a href="http://www.imdb.com/title/tt1276104/" target="_blank">Looper</a> - Decent action movie that has some clever ideas. Gives you goosebumps how old Bruce Willis is, but he still loves making action movies. 
+      </li>
 	  <li>
       	<a href="http://www.imdb.com/title/tt1637688/" target="_blank">In Time</a> - a very good idea but unfortunately the script and the actors aren't on par. Money is time and rich people gamble with centuries while poor people have only days. 
       </li>
