--- a/search.html
+++ b/search.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <form action="get" id="site_search">
-  <label for="search_box">Search</label><input type="text" id="search_box">
+  <input type="text" id="search_box">
   <input type="submit" value="search">
 </form>
 
