--- a/search.html
+++ b/search.html
@@ -8,4 +8,4 @@ layout: default
   <input type="submit" value="search" id="search_button">
 </form>
 
-<ul id="search_results"></ul>
+<ul id="search_results" class="lists cool-bullet"></ul>
