search better right column

--- a/search.html
+++ b/search.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-
+<p>Search website:</p>
 <form action="get" id="site_search">
   <span class="icon"><i class="fa fa-search"></i></span>
   <input type="text" id="search_box">
