--- a/404.html
+++ b/404.html
@@ -7,6 +7,8 @@ layout: default
   <h1>404. This is an error.</h1>
 	
   <p>The requested URL was not found on this server. Sorry for that. Here are the latest posts on my blog.</p>
+  
+  {% include search.html %}
 
   <ul class="post-list lists cool-bullet">
     {% for post in site.posts %}
