--- a/stuff.html
+++ b/stuff.html
@@ -6,6 +6,9 @@ layout: stuff
 
   <ul class="stuff lists cool-bullet">
   	  <li>
+      	<a href="http://www.imdb.com/title/tt0092593/" target="_blank">Au Revoir Les Enfants</a> - a very good movie about French children during the WWII. 
+      </li>
+  	  <li>
       	<a href="https://en.wikipedia.org/wiki/Lake_Como" target="_blank">Lake Como</a> and its villages are really nice and worth a trip. I don't know why it isn't more popular on tourist maps. If you are in Milan, it certainly pays off if you go north just one hour by car and you will be in cool small villages like Bellagio, Como and Lecco. 
       </li>
   	  <li>
