--- a/stuff.html
+++ b/stuff.html
@@ -6,6 +6,9 @@ layout: stuff
 
   <ul class="stuff lists cool-bullet">
   	  <li>
+      	<a href="http://www.imdb.com/title/tt0094716/" target="_blank">The Beast of War</a> - 3 tankists in a Soviet tank that are followed by the local fighters in Afganisthan. The commander is a sort of Ahab, but the whale is saving and protecting his tank, even at the expense of his crew. 
+      </li>
+  	  <li>
       	<a href="http://www.imdb.com/title/tt0092593/" target="_blank">Au Revoir Les Enfants</a> - a very good movie about French children during the WWII. 
       </li>
   	  <li>
